GalleryThumb: Fix some browsers stretching the image

--- a/src/gallery/components/GalleryThumb.scss
+++ b/src/gallery/components/GalleryThumb.scss
@@ -4,7 +4,7 @@
     height: 100%;
 
     img {
-        width: 100%;
+        width: auto;
         height: 100%;
         object-fit: fill;
     }
